# trellis-modal

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/trellis_app/: app.py  cli.py  generate.py  postprocess.py  r2.py
