[project]
name = "trellis-app"
version = "0.2.0"
description = "Generate 3D models from text prompts using TRELLIS.2 on Modal, stored in Cloudflare R2"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.0",
    "boto3>=1.34",
    "Pillow>=10",
]

[project.scripts]
trellis-generate = "trellis_app.cli:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
